Fix mutable list issue from #253